--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,6 @@
-version: '3.8'
-
 services:
   web:
-    build:
+    build: .
     ports:
       - "${PORT}:${PORT}"
     volumes:
@@ -12,3 +10,8 @@ services:
     environment:
       - DEBUG=${DEBUG}
       - SECRET_KEY=${SECRET_KEY}
+      # - DB_NAME=${DB_NAME}
+      # - DB_USER=${DB_USER}
+      # - DB_PASS=${DB_PASS}
+      # - DB_HOST=${DB_HOST}
+      # - DB_PORT=${DB_PORT}
