--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,8 @@ gunicorn>=21.2.0  # 若要部署到伺服器時使用
 azure-cognitiveservices-speech>=1.42.0  # Azure 語音服務
 
 drf-yasg>=1.21.9
+
+openai>=1.66.2
+
+# azure.identity>=1.20.0
+# azure-ai-inference>=1.0.0b9
