--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,24 @@ services:
     environment:
       - DEBUG=${DEBUG}
       - SECRET_KEY=${SECRET_KEY}
-      # - DB_NAME=${DB_NAME}
-      # - DB_USER=${DB_USER}
-      # - DB_PASS=${DB_PASS}
-      # - DB_HOST=${DB_HOST}
-      # - DB_PORT=${DB_PORT}
+    command: ["python", "manage.py", "runserver", "0.0.0.0:${PORT}"]
+  
+  react:
+    build: ./DeafLearning
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./DeafLearning:/src
+    environment:
+      - NODE_ENV=development
+    command: ["npm", "start"]
+  
+  flask:
+    build: ./DeafLearning/app
+    ports:
+      - "5000:5000"
+    volumes:
+      - ./DeafLearning:/app
+    environment:
+      - FLASK_APP=app.py
+    command: ["python", "app.py"]
